# CV_Rewriter_MultiAgent_Google_ADK_Project

./: .env.example  .gitignore  README.md  pyproject.toml  sample_JD.txt  test_config.py  test_formatter.py  test_import.py
.ipynb_checkpoints/: README-checkpoint.md
cv_formatter/: __init__.py  config.py  formatter.py  main.py  orchestrator.py
cv_formatter/agents/: __init__.py  company_agent.py  cv_agent.py  jd_agent.py  pdf_parser_agent.py  rewrite_agent.py  txt_parser_agent.py
cv_formatter/parsers/: __init__.py  pdf_parser.py  text_parser.py
